--- a/src/main/resources/lists/todolist.yaml
+++ b/src/main/resources/lists/todolist.yaml
@@ -1,10 +1,11 @@
 ---
 - id: "01923fff-dc18-7887-b304-be083b2a4022"
-  title: "asdfasdf"
-  description: "adfaadfa"
+  title: "Call Dr. Siegels Office"
+  description: "Ask what is going on with your forms release. You want to release\
+    \ all medical forms to yourself."
   completed: false
   creationTime: null
-  dueDate: 1729296000000
+  dueDate: "2025-06-16"
 - id: "01924067-9662-7889-ade5-f1ae6256b52b"
   title: null
   description: null
@@ -16,7 +17,7 @@
   description: ""
   completed: true
   creationTime: null
-  dueDate: 1729123200000
+  dueDate: "1729123200000"
 - id: "01924068-34bc-7889-ade6-05ed2dc13960"
   title: "Add feature to todoli shitcalendar with tasks on their associated deadlines"
   description: ""
@@ -32,57 +33,39 @@
 - id: "01924069-74a3-7889-ade6-17dbf7b26622"
   title: "Set tools into your going-away zone in the basement lik you should"
   description: ""
-  completed: false
+  completed: true
   creationTime: null
-  dueDate: 1729814400000
-- id: "01924419-b819-7990-9aca-2c90c972c251"
-  title: "add ability to move todolist items up/down list"
-  description: "consider an action menu that pops up with up/down arrows"
-  completed: false
-  creationTime: null
-  dueDate: null
+  dueDate: "1729814400000"
 - id: "019254da-39ef-7884-b1ce-01ca8ccbeca6"
-  title: "hello"
-  description: "this is me, you know how it is"
+  title: "Call Gennessee Urgent Care"
+  description: "Pay your bills over the phone"
   completed: false
   creationTime: null
-  dueDate: 1727913600000
+  dueDate: "2025-06-16"
 - id: "01925550-5cda-7bbe-ae0f-b253ea9e20f1"
   title: "Do the thing you know you should do"
   description: "I have to do it"
   completed: true
   creationTime: null
-  dueDate: 1727913600000
-- id: "0192aaa4-01ba-7bb8-a2f6-2717a3c77e61"
-  title: "hello"
-  description: "is a me"
-  completed: false
-  creationTime: null
-  dueDate: 1729382400000
+  dueDate: "1727913600000"
 - id: "0192ab70-d6d8-7337-86c6-473044a388cc"
   title: "i gotta go"
   description: "asdf"
   completed: true
   creationTime: null
-  dueDate: 1729382400000
+  dueDate: "1729382400000"
 - id: "0192ab78-09aa-7663-8511-8fdd23704b96"
   title: "this is a new task"
   description: "poopy doopy"
   completed: true
   creationTime: null
-  dueDate: 1729123200000
+  dueDate: "1729123200000"
 - id: "0192abce-559e-7009-8e32-758cec149580"
   title: "new task"
   description: "i gotta do it for sure"
   completed: true
   creationTime: null
-  dueDate: 1729382400000
-- id: "0192abce-c903-7009-8e32-7e1faf2ba799"
-  title: "i gotta do this"
-  description: "for sure"
-  completed: false
-  creationTime: null
-  dueDate: 1726012800000
+  dueDate: "1729382400000"
 - id: "0192df38-5d21-7004-8a7e-25d0714e1e0a"
   title: "hello"
   description: "i gott ado dis"
@@ -101,21 +84,15 @@
   completed: true
   creationTime: null
   dueDate: null
-- id: "9306f991-87fa-4e92-b96c-a478bd3076c9"
-  title: "Call Dr. Siegels Office to See What's Going on"
+- id: "8ee06329-6230-416b-82b9-6fa70fe82f14"
+  title: "Pay for Campsite"
   description: ""
   completed: false
   creationTime: null
-  dueDate: 1749427200000
-- id: "7f6c0967-957f-4794-a24b-18bf473c2dc0"
-  title: "hello me boy"
-  description: "spongeboob"
+  dueDate: "2025-06-16"
+- id: "64049554-c26d-499c-ba2e-cf0b62ca9dec"
+  title: "Open Michael's Letter for Wedding, Reply"
+  description: ""
   completed: false
   creationTime: null
-  dueDate: null
-- id: "ab0a8bbe-c068-41a4-b511-35a885ac661f"
-  title: "damn thats crazy"
-  description: "insane"
-  completed: false
-  creationTime: null
-  dueDate: null
+  dueDate: "2025-06-16"
