--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=Imperium
 spring.profiles.active=local
 logging.level.root=TRACE
 list.rootFilePath=src/main/resources/lists
+filterSets.filePath=src/main/resources/filtersets/filterSets.yaml
 server.port=3000
 spring.security.user.name=yourUsername
 spring.security.user.password=yourPassword
