--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Imperium
 logging.level.root=TRACE
-list.rootFilePath=src/main/resources/lists
+appdata-path=/appdata/
 filterSets.filePath=src/main/resources/filtersets/filterSets.yaml
 server.port=3000
 spring.security.user.name=yourUsername
