Updated styling for mobile

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,12 @@
 spring.thymeleaf.cache=false
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
+appdata-path=src/main/resources/lists/
+
+#Thymeleaf
+thymeleaf.cache: false
+thymeleaf.mode: HTML
+thymeleaf.encoding: UTF-8
+thymeleaf.prefix: file:src/main/resources/templates/
+thymeleaf.resources.static-locations: file:src/main/resources/static/
+thymeleaf.resources.cache.period: 0
