More docker changes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Imperium
-logging.level.root=TRACE
+logging.level.root=INFO
 appdata-path=/appdata/
 filterSets.filePath=src/main/resources/filtersets/filterSets.yaml
 server.port=3000
