--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,6 @@ tasks.named('test') {
 // Define values
 def imageName = 'listmaster'
 def containerName = 'listmaster'
-def jarFile = "build/libs/ListMaster-${project.version}.jar"
 
 // Task: Build Docker image
 tasks.register("buildDockerImage", Exec) {
@@ -55,21 +54,36 @@ tasks.register("buildDockerImage", Exec) {
 }
 
 // Task: Run Docker container
-tasks.register("runDockerContainer", Exec) {
+tasks.register("runDockerCompose", Exec) {
 	dependsOn buildDockerImage
-	doFirst {
-		// Optional: stop and remove existing container
-		exec {
-			commandLine 'docker', 'rm', '-f', containerName
-			ignoreExitValue = true
-		}
-	}
-	commandLine 'docker', 'run', '--name', containerName, '-p', '3000:3000', imageName
+	commandLine 'docker', 'compose', 'up'
 }
 
 // Convenience task to do all in one
-tasks.register("buildAndRunDocker") {
-	dependsOn runDockerContainer
+tasks.register("dockerCompose") {
+	dependsOn runDockerCompose
 	group = 'docker'
-	description = 'Builds the JAR, builds the Docker image, and runs the container'
+	description = 'Builds the JAR, builds the Docker image, and runs docker compose'
+}
+
+// Task: Run Docker container
+tasks.register("runDockerComposeDetached", Exec) {
+	dependsOn buildDockerImage
+	commandLine 'docker', 'compose', 'up', '-d'
+}
+
+tasks.register("dockerComposeDetached") {
+	dependsOn runDockerComposeDetached
+	group = 'docker'
+	description = 'Starts a detached run'
+}
+
+tasks.register("runDockerComposeDown", Exec) {
+	commandLine 'docker', 'compose','down'
+}
+
+tasks.register("dockerComposeDown") {
+	dependsOn runDockerComposeDown
+	group = 'docker'
+	description = 'Brings down the running docker containers.'
 }
